--- a/no3.html
+++ b/no3.html
@@ -31,7 +31,7 @@
       ></script>
 
       <h1>Manja na! Kitna bhav khaegi 😭</h1>
-      <p>i love you chhavi.</p>
+      <p>ek last bar pyar m jiye ge hm dono success honge hm.</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
